INIT: new changes

--- a/src/app/modules/website/pages/home-page/home-page.component.html
+++ b/src/app/modules/website/pages/home-page/home-page.component.html
@@ -1,30 +1,30 @@
 <img src="#" alt="" >
 
-<div class="text-center bg-cyan-700 h-[64vh] text-white flex justify-center items-center flex-col md:hidden  " >
+<div class="text-center bg-cyan-700 h-[64vh] text-white flex justify-center items-center flex-col  " >
   <h1 class="text-[40px] sm:text-[50px] md:text-[60px] lg:text-[70px] ">Making your <br>
     ideas possible.</h1>
   <p class="text-[14px] sm:text-[18px] md:text-[22px] lg:text-[25px] py-4">Lorem ipsum dolor sit amet consectetur<br>
     adipisicing elit.</p>
 </div>
-<div class=" text-white flex  justify-between items-center -mt-10 md:-mt-16 lg:-mt-20 mx-56 sm:mx-10 lg:mx-52" >
-    <div class="bg-cyan-700 w-[250px] h-[300px]  border-gray-200 border-[0.5px] border-solid shadow-[5px_10px_15px_rgba(0,0,0,0.2)] 
+<div class=" text-white grid grid-cols-2 flex-col md:flex md:flex-row justify-between items-center -mt-10 md:-mt-16 lg:-mt-20 mx-2 sm:mx-4 md:mx-6 lg:mx-44" >
+    <div class="bg-cyan-700  w-80 h-96 sm:w-[250px] sm:h-[300px] m-2  border-gray-200 border-[0.5px] border-solid shadow-[5px_10px_15px_rgba(0,0,0,0.2)] 
      flex justify-center items-center flex-col ">
-      <i class="fa fa-users fa-3x "></i>
+      <i class="fa fa-users fa-3x p-6"></i>
       <h3 class =" text-[25px]">Consolting </h3>
       <p class=" text-[15px] "> Lorem ipsum dolor sit amet.</p>
     </div>
-    <div class="bg-cyan-700 w-[250px] h-[300px] border-gray-200 border-[0.5px] border-solid shadow-[5px_10px_15px_rgba(0,0,0,0.2)] flex justify-center items-center flex-col ">
-      <i class="fa fa-bar-chart fa-3x "></i>
+    <div class="bg-cyan-700 w-80 h-96 sm:w-[250px] sm:h-[300px] m-2 border-gray-200 border-[0.5px] border-solid shadow-[5px_10px_15px_rgba(0,0,0,0.2)] flex justify-center items-center flex-col ">
+      <i class="fa fa-bar-chart fa-3x p-6 "></i>
       <h3 class =" text-[25px]" >Marketing</h3>
       <p class=" text-[15px] "> Lorem ipsum dolor sit amet.</p>
     </div>
-    <div class="bg-cyan-700 w-[250px] h-[300px] border-gray-200 border-[0.5px] border-solid shadow-[5px_10px_15px_rgba(0,0,0,0.2)] flex justify-center items-center flex-col ">
-      <i class="fa fa-archive fa-3x "></i>
+    <div class="bg-cyan-700  w-80 h-96 sm:w-[250px] sm:h-[300px] m-2 border-gray-200 border-[0.5px] border-solid shadow-[5px_10px_15px_rgba(0,0,0,0.2)] flex justify-center items-center flex-col ">
+      <i class="fa fa-archive fa-3x p-6 "></i>
       <h3 class =" text-[25px]">Resources</h3>
       <p class=" text-[15px] "> Lorem ipsum dolor sit amet.</p>
     </div>
-    <div class="bg-cyan-700 w-[250px] h-[300px] border-gray-200 border-[0.5px] border-solid shadow-[5px_10px_15px_rgba(0,0,0,0.2)] flex justify-center items-center flex-col ">
-      <i class="fa fa-money fa-3x "></i>
+    <div class="bg-cyan-700  w-80 h-96 sm:w-[250px] sm:h-[300px] m-2 border-gray-200 border-[0.5px] border-solid shadow-[5px_10px_15px_rgba(0,0,0,0.2)] flex justify-center items-center flex-col ">
+      <i class="fa fa-money fa-3x p-6"></i>
       <h3 class =" text-[25px]">Finance</h3>
       <p class=" text-[15px] "> Lorem ipsum dolor sit amet.</p>
     </div>
@@ -34,11 +34,11 @@
 
 
 
-<div class="flex justify-around items-center h-[100vh] mx-16">
+<div class="flex flex-col justify-around items-center h-[500px] px-16 sm:flex-col md:flex lg:flex-row my-28" >
   <div>
-   <p class="text-[15px] mx-12 my-2 ">GLOBAL PROFESIONAL NETWORK</p>
-   <p class="text-[40px] font-bold mx-12">World wide business</p>
-   <p class="text-[18px] w-[80%] m-12">Lorem ipsum dolor sit amet consectetur
+   <p class="text-[10px] sm:text-[12px] md:text-[14px] lg:text-[16px] mx-12 my-2 ">GLOBAL PROFESIONAL NETWORK</p>
+   <p class="text-[25px] sm:text-[30px] md:text-[35px] lg:text-[40px]  font-bold mx-12">World wide business</p>
+   <p class="text-[13px] sm:text-[15px] md:text-[18px] lg:text-[20px] w-[80%] m-1">Lorem ipsum dolor sit amet consectetur
     adipisicing elit. Doloribus nisi nihil labore beatae aliquid
     cumque facere quis in molestiae, delectus dolorum magnam,
      voluptates saepe magni ipsam minima quidem omnis sequi fugiat
@@ -49,7 +49,9 @@
       </p>
    </div>
 
-  <img src="https://picsum.photos/500/350?random=9" alt="picture" />
+  <img src="https://picsum.photos/500/350?random=9" alt="picture" class="my-4"/>
+
+ 
 </div>
 
 
