--- a/src/app/modules/website/_component/footer/footer.component.html
+++ b/src/app/modules/website/_component/footer/footer.component.html
@@ -1,13 +1,16 @@
-<div class=" bg-cyan-700  bg-[length:200px_100px] text-white flex justify-around items-center  h-[200px]  ">
-    <a href=""><i class="fa fa-phone-square fa-5x "></i></a>
+<div class=" bg-cyan-700   text-white flex justify-around items-center  h-72  ">
+    <a href=""><i class="fa fa-phone-square fa-5x mx-6"></i></a>
 
 
    <div>
-   <P class="text-[30px] font-bold">Do you have any question about our services?</P>
-   <p class="text-[14px] m-4"> we provid free consultation so talk with us!</p>
+   <P class="text-3xl md:text-5xl font-bold">Do you have any question about our services?</P>
+   <p class="text-2xl md:text-3xl m-4"> we provid free consultation so talk with us!</p>
    </div>
  
 
 
-   <button class="w-[350px] h-[45px] bg-slate-200 text-[black] font-bold cursor-pointer border-solid border-[1px] border-gray-500 rounded-[25px] hover:bg-cyan-300 translate-x-1 text-[12px]" >CALL FOR FREE CONSULTION  </button>
+   <button class="w-52 h-16 lg:w-[350px] lg:h-[45px] md:w-[300px] md:h-[45px]
+    bg-white text-cyan-700 font-bold cursor-pointer border-solid border
+     border-white rounded-full hover:bg-gray-300  text-base md:text-2xl mx-2" >
+     CALL FOR FREE CONSULTION  </button>
  </div>
