--- a/src/app/modules/website/_components/header/header.component.html
+++ b/src/app/modules/website/_components/header/header.component.html
@@ -17,17 +17,15 @@
     </a></li>
   </ul>
 </div>
-<div class="h-[60px] flex justify-end items-center border-b-2 border-solid border-gray-800">
+<div class="h-20 flex justify-end items-center border-b-2 border-solid border-gray-900 overflow-hidden">
   <div class="flex items-center justify-end">
-    <a class="border-gray-700 border-r text-[14px] px-3 " href="#">HOME</a>
-    <a class="border-gray-700 border-r text-[14px] px-3 " [routerLink]="'/aboutus'">ABOUT US</a>
-    <a class="border-gray-700 border-r text-[14px] px-3 " [routerLink]="'/our-services'">OUR SERVICES</a>
-    <a class="border-gray-700 border-r text-[14px] px-3 " [routerLink]="'/our-projects'">OUR PROJECT</a>
-    <a class="border-gray-700 border-r text-[14px] px-3 " [routerLink]="'/our-blog'">OUR BLOG</a>
-    <a class="border-gray-700 border-r text-[14px] px-3 " [routerLink]="'/contact-us'">CONTACT US</a>
+    <a class="border-gray-700 border-r md:text-2xl px-1 md:px-3 " href="#">HOME</a>
+    <a class="border-gray-700 border-r md:text-2xl px-1 md:px-3 " [routerLink]="'/aboutus'">ABOUT US</a>
+    <a class="border-gray-700 border-r md:text-2xl px-1 md:px-3 " [routerLink]="'/our-services'">OUR SERVICES</a>
+    <a class="border-gray-700 border-r md:text-2xl px-1 md:px-3 " [routerLink]="'/contact-us'">CONTACT US</a>
   </div>
   <div>
-    <button class="w-[90px] h-[35px] text-white rounded bg-slate-700 border-solid border-1 border-white mx-[20px] cursor-pointer hover:bg-cyan-400">Buy now</button>
+    <button class="w-28 h-14 text-white rounded bg-slate-700 border-solid border border-white mx-2 md:mx-4 cursor-pointer hover:bg-cyan-400">Buy now</button>
   </div>
   <div >
     <i class="fa fa-search px-3 text-gray-600 fa-2x " > </i>
