--- a/src/app/modules/website/pages/our-services/our-services.component.html
+++ b/src/app/modules/website/pages/our-services/our-services.component.html
@@ -1,45 +1,40 @@
 <div class=" ">
-    <div class="flex items-center justify-around h-[550px] bg-cyan-700  " >
+    <div class="flex flex-col items-center justify-around h-[64vh] bg-cyan-700  " >
         
-        <img
-        src="https://picsum.photos/id/2/500/350"
-        alt="picture"
-        class= "w-[50%] h-[400px] p-12 "/>
-        <div class=" w-[50%] h-[400px] text-center  ">
-        <p class="text-[70px] text-white  pt-24">Our sevices</p>
-        <p class="text-3xl text-white leading-loose p-16">
+     
+        <div class=" md:w-1/2 h-[400px] text-center  ">
+        <p class="text-5xl md:text-[60px] lg:text[70px] text-white  pt-24">Our sevices</p>
+        <p class="text-2xl lg:text:3xl text-white leading-loose m-10">
           Lorem ipsum dolor sit, 
         amet consectetur adipisicing elit.
         Quaerat dolores, eaque harum, sunt
         aliquam asperiores error illo odio
-        dicta earum blanditiis sit aperiam
-        repudiandae! Earum voluptate corporis
-         laborum blanditiis cumque!</p>
+        dicta earum blanditiis.</p>
         </div>
     </div>
 
-    <div class=" text-white  flex justify-between items-center mx-52  mt-[-65px] mb-96" >
-        <div class="bg-cyan-700 w-[250px] h-[300px]
-         border-gray-200 border border-solid shadow-lg
-         flex justify-center items-center flex-col ">
-          <i class="fa fa-users fa-3x "></i>
-          <h3 class =" text-[25px]">Digital services </h3>
-          <p class=" text-[15px] "> Lorem ipsum dolor sit amet.</p>
-        </div>
-        <div class="bg-cyan-700 w-[250px] h-[300px] border-gray-200 border border-solid shadow-lg flex justify-center items-center flex-col ">
-          <i class="fa fa-bar-chart fa-3x "></i>
-          <h3 class =" text-[25px]" >Creative ideas</h3>
-          <p class=" text-[15px] "> Lorem ipsum dolor sit amet.</p>
-        </div>
-        <div class="bg-cyan-700 w-[250px] h-[300px] border-gray-200 border border-solid shadow-lg flex justify-center items-center flex-col ">
-          <i class="fa fa-archive fa-3x "></i>
-          <h3 class =" text-[25px]">online services</h3>
-          <p class=" text-[15px] "> Lorem ipsum dolor sit amet.</p>
-        </div>
-        <div class="bg-cyan-700 w-[250px] h-[300px] border-gray-200 border border-solid shadow-lg flex justify-center items-center flex-col ">
-          <i class="fa fa-money fa-3x "></i>
-          <h3 class =" text-[25px] p-4">Web design</h3>
-          <p class=" text-[15px] "> Lorem ipsum dolor sit amet.</p>
-        </div>
+    <div class=" text-white grid grid-cols-2 flex-col md:flex md:flex-row justify-between items-center -mt-10 md:-mt-16 lg:-mt-20 mx-2 sm:mx-4 md:mx-6 lg:mx-44" >
+      <div class="bg-cyan-700  w-80 h-96 sm:w-[250px] sm:h-[300px] m-2  border-gray-200 border-[0.5px] border-solid shadow-[5px_10px_15px_rgba(0,0,0,0.2)] 
+       flex justify-center items-center flex-col ">
+        <i class="fa fa-users fa-3x border p-24 rounded-3xl "></i>
+        <h3 class =" text-[25px]">Consolting </h3>
+        <p class=" text-[15px] "> Lorem ipsum dolor sit amet.</p>
       </div>
-</div>
+      <div class="bg-cyan-700 w-80 h-96 sm:w-[250px] sm:h-[300px] m-2 border-gray-200 border-[0.5px] border-solid shadow-[5px_10px_15px_rgba(0,0,0,0.2)] flex justify-center items-center flex-col ">
+        <i class="fa fa-bar-chart fa-3x border p-24 rounded-3xl "></i>
+        <h3 class =" text-[25px]" >Marketing</h3>
+        <p class=" text-[15px] "> Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="bg-cyan-700  w-80 h-96 sm:w-[250px] sm:h-[300px] m-2 border-gray-200 border-[0.5px] border-solid shadow-[5px_10px_15px_rgba(0,0,0,0.2)] flex justify-center items-center flex-col ">
+        <i class="fa fa-archive fa-3x border p-24 rounded-3xl"></i>
+        <h3 class =" text-[25px]">Resources</h3>
+        <p class=" text-[15px] "> Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="bg-cyan-700  w-80 h-96 sm:w-[250px] sm:h-[300px] m-2 border-gray-200 border-[0.5px] border-solid shadow-[5px_10px_15px_rgba(0,0,0,0.2)] flex justify-center items-center flex-col ">
+        <i class="fa fa-money fa-3x border p-24 rounded-3xl"></i>
+        <h3 class =" text-[25px]">Finance</h3>
+        <p class=" text-[15px] "> Lorem ipsum dolor sit amet.</p>
+      </div>
+    </div>
+      </div>
+
