--- a/src/app/modules/website/pages/home-page/home-page.component.html
+++ b/src/app/modules/website/pages/home-page/home-page.component.html
@@ -6,7 +6,7 @@
   <p class="text-[14px] sm:text-[18px] md:text-[22px] lg:text-[25px] py-4">Lorem ipsum dolor sit amet consectetur<br>
     adipisicing elit.</p>
 </div>
-<div class=" text-white grid grid-cols-2 flex-col md:flex md:flex-row justify-between items-center -mt-10 md:-mt-16 lg:-mt-20 mx-2 sm:mx-4 md:mx-6 lg:mx-44" >
+<div class=" text-white grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 -mt-10 md:-mt-16 lg:-mt-20 mx-2 sm:mx-4 md:mx-6 lg:mx-44" >
     <div class="bg-cyan-700  w-80 h-96 sm:w-[250px] sm:h-[300px] m-2  border-gray-200 border-[0.5px] border-solid shadow-[5px_10px_15px_rgba(0,0,0,0.2)] 
      flex justify-center items-center flex-col ">
       <i class="fa fa-users fa-3x p-6"></i>
