INIt: Continer added

--- a/src/app/modules/website/pages/home-page/home-page.component.html
+++ b/src/app/modules/website/pages/home-page/home-page.component.html
@@ -1,4 +1,5 @@
-<img src="#" alt="" >
+<div class=" w-full flex flex-col continer">
+  <img src="#" alt="" >
 
 <div class="text-center bg-cyan-700 h-[64vh] text-white flex justify-center items-center flex-col  " >
   <h1 class="text-[40px] sm:text-[50px] md:text-[60px] lg:text-[70px] ">Making your <br>
@@ -6,7 +7,7 @@
   <p class="text-[14px] sm:text-[18px] md:text-[22px] lg:text-[25px] py-4">Lorem ipsum dolor sit amet consectetur<br>
     adipisicing elit.</p>
 </div>
-<div class=" text-white grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 -mt-10 md:-mt-16 lg:-mt-20 mx-2 sm:mx-4 md:mx-6 lg:mx-44" >
+<div class=" text-white grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 " >
     <div class="bg-cyan-700  w-80 h-96 sm:w-[250px] sm:h-[300px] m-2  border-gray-200 border-[0.5px] border-solid shadow-[5px_10px_15px_rgba(0,0,0,0.2)] 
      flex justify-center items-center flex-col ">
       <i class="fa fa-users fa-3x p-6"></i>
@@ -59,3 +60,5 @@
 
 
 
+
+</div>
